set(
	SGE_IMAGECOLOR_FILES
	libs/imagecolor/impl/include/sge/image/color/impl/converter.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/cac/choose.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/cac/convert.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/cac/convert_visitor.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/cac/copy.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/cac/function.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/cac/permutate_compare.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/cac/rgb_to_srgb.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/cac/source.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/cac/srgb_to_rgb.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/cac/visitor.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/algorithm/copy_and_convert.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/a8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/all.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/bgr32f.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/bgr8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/bgra32f.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/bgra8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/bgrx8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/empty_c8_1.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/from_static.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/from_static_type.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/l8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/la8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/luminance_c8_1.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/luminance_c8_2.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/object_base_decl.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/object_base_impl.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/object_decl.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/object_fwd.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/object_impl.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/object_traits.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/r32f.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/r_c32f_1.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/rgb32f.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/rgb8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/rgb_c32f_3.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/rgb_c32f_4.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/rgb_c8_3.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/rgb_c8_4.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/rgba32f.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/rgba8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/rgbx8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/sbgr8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/sbgra8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/srgb8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/srgb_c8_3.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/srgb_c8_4.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/format/srgba8.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/view/basic_elements.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/view/basic_variant.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/view/color_format.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/view/color_layout.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/view/format_channel.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/view/from_static.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/view/from_static_visitor.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/dynamic/view/image_format.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/format_map.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/format_pair.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/make_format_pair.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/traits/dynamic_copy_and_convert.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/traits/format_map.hpp
	libs/imagecolor/impl/include/sge/image/color/impl/traits/static_converter.hpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/a8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/bgr32f.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/bgr8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/bgra32f.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/bgra8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/bgrx8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/from_static.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/l8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/la8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/r32f.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/rgb32f.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/rgb8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/rgba32f.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/rgba8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/rgbx8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/sbgr8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/sbgra8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/srgb8.cpp
	libs/imagecolor/impl/src/image/color/impl/dynamic/format/srgba8.cpp
	libs/imagecolor/include/sge/image/color/a8.hpp
	libs/imagecolor/include/sge/image/color/a8_format.hpp
	libs/imagecolor/include/sge/image/color/a8_fwd.hpp
	libs/imagecolor/include/sge/image/color/any/clear.hpp
	libs/imagecolor/include/sge/image/color/any/compare.hpp
	libs/imagecolor/include/sge/image/color/any/convert.hpp
	libs/imagecolor/include/sge/image/color/any/from_string.hpp
	libs/imagecolor/include/sge/image/color/any/object.hpp
	libs/imagecolor/include/sge/image/color/any/object_fwd.hpp
	libs/imagecolor/include/sge/image/color/any/print.hpp
	libs/imagecolor/include/sge/image/color/bgr32f.hpp
	libs/imagecolor/include/sge/image/color/bgr32f_format.hpp
	libs/imagecolor/include/sge/image/color/bgr32f_fwd.hpp
	libs/imagecolor/include/sge/image/color/bgr8.hpp
	libs/imagecolor/include/sge/image/color/bgr8_format.hpp
	libs/imagecolor/include/sge/image/color/bgr8_fwd.hpp
	libs/imagecolor/include/sge/image/color/bgra32f.hpp
	libs/imagecolor/include/sge/image/color/bgra32f_format.hpp
	libs/imagecolor/include/sge/image/color/bgra32f_fwd.hpp
	libs/imagecolor/include/sge/image/color/bgra8.hpp
	libs/imagecolor/include/sge/image/color/bgra8_format.hpp
	libs/imagecolor/include/sge/image/color/bgra8_fwd.hpp
	libs/imagecolor/include/sge/image/color/bgrx8.hpp
	libs/imagecolor/include/sge/image/color/bgrx8_format.hpp
	libs/imagecolor/include/sge/image/color/bgrx8_fwd.hpp
	libs/imagecolor/include/sge/image/color/convert.hpp
	libs/imagecolor/include/sge/image/color/detail/pp_formats.hpp
	libs/imagecolor/include/sge/image/color/element_count.hpp
	libs/imagecolor/include/sge/image/color/enable_if_has_format.hpp
	libs/imagecolor/include/sge/image/color/format.hpp
	libs/imagecolor/include/sge/image/color/format_element_size.hpp
	libs/imagecolor/include/sge/image/color/format_from_static.hpp
	libs/imagecolor/include/sge/image/color/format_fwd.hpp
	libs/imagecolor/include/sge/image/color/format_is_srgb.hpp
	libs/imagecolor/include/sge/image/color/format_stride.hpp
	libs/imagecolor/include/sge/image/color/format_to_string.hpp
	libs/imagecolor/include/sge/image/color/init/alpha.hpp
	libs/imagecolor/include/sge/image/color/init/blue.hpp
	libs/imagecolor/include/sge/image/color/init/green.hpp
	libs/imagecolor/include/sge/image/color/init/luminance.hpp
	libs/imagecolor/include/sge/image/color/init/red.hpp
	libs/imagecolor/include/sge/image/color/invalid_convert.hpp
	libs/imagecolor/include/sge/image/color/invalid_copy.hpp
	libs/imagecolor/include/sge/image/color/is_convertible.hpp
	libs/imagecolor/include/sge/image/color/is_convertible_v.hpp
	libs/imagecolor/include/sge/image/color/l8.hpp
	libs/imagecolor/include/sge/image/color/l8_format.hpp
	libs/imagecolor/include/sge/image/color/l8_fwd.hpp
	libs/imagecolor/include/sge/image/color/la8.hpp
	libs/imagecolor/include/sge/image/color/la8_format.hpp
	libs/imagecolor/include/sge/image/color/la8_fwd.hpp
	libs/imagecolor/include/sge/image/color/optional_format.hpp
	libs/imagecolor/include/sge/image/color/optional_format_fwd.hpp
	libs/imagecolor/include/sge/image/color/predef.hpp
	libs/imagecolor/include/sge/image/color/r32f.hpp
	libs/imagecolor/include/sge/image/color/r32f_format.hpp
	libs/imagecolor/include/sge/image/color/r32f_fwd.hpp
	libs/imagecolor/include/sge/image/color/rgb32f.hpp
	libs/imagecolor/include/sge/image/color/rgb32f_format.hpp
	libs/imagecolor/include/sge/image/color/rgb32f_fwd.hpp
	libs/imagecolor/include/sge/image/color/rgb8.hpp
	libs/imagecolor/include/sge/image/color/rgb8_format.hpp
	libs/imagecolor/include/sge/image/color/rgb8_from_hex_string.hpp
	libs/imagecolor/include/sge/image/color/rgb8_fwd.hpp
	libs/imagecolor/include/sge/image/color/rgba32f.hpp
	libs/imagecolor/include/sge/image/color/rgba32f_format.hpp
	libs/imagecolor/include/sge/image/color/rgba32f_fwd.hpp
	libs/imagecolor/include/sge/image/color/rgba8.hpp
	libs/imagecolor/include/sge/image/color/rgba8_format.hpp
	libs/imagecolor/include/sge/image/color/rgba8_from_hex_string.hpp
	libs/imagecolor/include/sge/image/color/rgba8_fwd.hpp
	libs/imagecolor/include/sge/image/color/rgbx8.hpp
	libs/imagecolor/include/sge/image/color/rgbx8_format.hpp
	libs/imagecolor/include/sge/image/color/rgbx8_fwd.hpp
	libs/imagecolor/include/sge/image/color/sbgr8.hpp
	libs/imagecolor/include/sge/image/color/sbgr8_format.hpp
	libs/imagecolor/include/sge/image/color/sbgr8_fwd.hpp
	libs/imagecolor/include/sge/image/color/sbgra8.hpp
	libs/imagecolor/include/sge/image/color/sbgra8_format.hpp
	libs/imagecolor/include/sge/image/color/sbgra8_fwd.hpp
	libs/imagecolor/include/sge/image/color/srgb8.hpp
	libs/imagecolor/include/sge/image/color/srgb8_format.hpp
	libs/imagecolor/include/sge/image/color/srgb8_fwd.hpp
	libs/imagecolor/include/sge/image/color/srgba8.hpp
	libs/imagecolor/include/sge/image/color/srgba8_format.hpp
	libs/imagecolor/include/sge/image/color/srgba8_fwd.hpp
	libs/imagecolor/include/sge/image/color/static_formats.hpp
	libs/imagecolor/include/sge/image/color/tag.hpp
	libs/imagecolor/include/sge/image/color/traits/format_fwd.hpp
	libs/imagecolor/include/sge/image/color/traits/format_stride.hpp
	libs/imagecolor/include/sge/image/color/traits/format_to_string.hpp
	libs/imagecolor/include/sge/image/color/traits/static_formats.hpp
	libs/imagecolor/src/image/color/any/clear.cpp
	libs/imagecolor/src/image/color/any/convert.cpp
	libs/imagecolor/src/image/color/any/from_string.cpp
	libs/imagecolor/src/image/color/any/object.cpp
	libs/imagecolor/src/image/color/any/print.cpp
	libs/imagecolor/src/image/color/element_count.cpp
	libs/imagecolor/src/image/color/format_element_size.cpp
	libs/imagecolor/src/image/color/format_from_static.cpp
	libs/imagecolor/src/image/color/format_is_srgb.cpp
	libs/imagecolor/src/image/color/format_stride.cpp
	libs/imagecolor/src/image/color/format_to_string.cpp
	libs/imagecolor/src/image/color/invalid_convert.cpp
	libs/imagecolor/src/image/color/invalid_copy.cpp
	libs/imagecolor/src/image/color/predef.cpp
	libs/imagecolor/src/image/color/traits/format_stride.cpp
	libs/imagecolor/src/image/color/traits/format_to_string.cpp
)

find_package(
	mizuiro
	REQUIRED
)

add_sge_base_library(
	"image/color"
	HAS_IMPL_DIR
	SGE_DEPS
		sgeimage
	TRANSITIVE_SGE_DEPS
		sgeimage_interface
	USE_IMPL_INCLUDE_OF
		core
	ADDITIONAL_DEPS
		mizuiro_interface
		${fcppt_core_TARGET}
	TRANSITIVE_ADDITIONAL_DEPS
		mizuiro_interface
		fcppt_core_interface
	IMPLEMENT_FROM
		image
)
