set(
	SGE_INPUT_FILES
	libs/input/impl/include/sge/input/impl/cursor/relative_movement/detail/object.hpp
	libs/input/impl/include/sge/input/impl/info/container_impl.hpp
	libs/input/impl/include/sge/input/impl/info/instantiate_container.hpp
	libs/input/impl/include/sge/input/impl/log_name.hpp
	libs/input/impl/include/sge/input/impl/multi_processor.hpp
	libs/input/impl/include/sge/input/impl/multi_system.hpp
	libs/input/impl/include/sge/input/impl/system_ptr_vector.hpp
	libs/input/impl/src/input/impl/cursor/relative_movement/detail/object.cpp
	libs/input/impl/src/input/impl/log_name.cpp
	libs/input/impl/src/input/impl/multi_processor.cpp
	libs/input/impl/src/input/impl/multi_system.cpp
	libs/input/include/sge/input/capabilities.hpp
	libs/input/include/sge/input/capabilities_field.hpp
	libs/input/include/sge/input/capabilities_field_fwd.hpp
	libs/input/include/sge/input/capabilities_fwd.hpp
	libs/input/include/sge/input/capabilities_to_string.hpp
	libs/input/include/sge/input/const_processor_ref.hpp
	libs/input/include/sge/input/create_multi_system.hpp
	libs/input/include/sge/input/cursor/button_code.hpp
	libs/input/include/sge/input/cursor/button_code_fwd.hpp
	libs/input/include/sge/input/cursor/button_code_to_string.hpp
	libs/input/include/sge/input/cursor/button_pressed.hpp
	libs/input/include/sge/input/cursor/container.hpp
	libs/input/include/sge/input/cursor/event/base.hpp
	libs/input/include/sge/input/cursor/event/base_fwd.hpp
	libs/input/include/sge/input/cursor/event/button.hpp
	libs/input/include/sge/input/cursor/event/button_fwd.hpp
	libs/input/include/sge/input/cursor/event/discover.hpp
	libs/input/include/sge/input/cursor/event/discover_fwd.hpp
	libs/input/include/sge/input/cursor/event/move.hpp
	libs/input/include/sge/input/cursor/event/move_fwd.hpp
	libs/input/include/sge/input/cursor/event/remove.hpp
	libs/input/include/sge/input/cursor/event/remove_fwd.hpp
	libs/input/include/sge/input/cursor/event/scroll.hpp
	libs/input/include/sge/input/cursor/event/scroll_fwd.hpp
	libs/input/include/sge/input/cursor/mode.hpp
	libs/input/include/sge/input/cursor/mode_fwd.hpp
	libs/input/include/sge/input/cursor/object.hpp
	libs/input/include/sge/input/cursor/object_fwd.hpp
	libs/input/include/sge/input/cursor/optional_position.hpp
	libs/input/include/sge/input/cursor/optional_position_fwd.hpp
	libs/input/include/sge/input/cursor/position.hpp
	libs/input/include/sge/input/cursor/position_fwd.hpp
	libs/input/include/sge/input/cursor/position_unit.hpp
	libs/input/include/sge/input/cursor/relative_movement/detail/object_fwd.hpp
	libs/input/include/sge/input/cursor/relative_movement/difference.hpp
	libs/input/include/sge/input/cursor/relative_movement/difference_fwd.hpp
	libs/input/include/sge/input/cursor/relative_movement/event.hpp
	libs/input/include/sge/input/cursor/relative_movement/event_fwd.hpp
	libs/input/include/sge/input/cursor/relative_movement/object.hpp
	libs/input/include/sge/input/cursor/relative_movement/object_fwd.hpp
	libs/input/include/sge/input/cursor/scroll_code.hpp
	libs/input/include/sge/input/cursor/scroll_code_fwd.hpp
	libs/input/include/sge/input/cursor/scroll_code_to_string.hpp
	libs/input/include/sge/input/cursor/scroll_value.hpp
	libs/input/include/sge/input/cursor/shared_ptr.hpp
	libs/input/include/sge/input/event_base.hpp
	libs/input/include/sge/input/event_base_fwd.hpp
	libs/input/include/sge/input/exception.hpp
	libs/input/include/sge/input/focus/char_type.hpp
	libs/input/include/sge/input/focus/container.hpp
	libs/input/include/sge/input/focus/event/base.hpp
	libs/input/include/sge/input/focus/event/base_fwd.hpp
	libs/input/include/sge/input/focus/event/discover.hpp
	libs/input/include/sge/input/focus/event/discover_fwd.hpp
	libs/input/include/sge/input/focus/event/in.hpp
	libs/input/include/sge/input/focus/event/in_fwd.hpp
	libs/input/include/sge/input/focus/event/key.hpp
	libs/input/include/sge/input/focus/event/key_fwd.hpp
	libs/input/include/sge/input/focus/event/key_repeat.hpp
	libs/input/include/sge/input/focus/event/key_repeat_fwd.hpp
	libs/input/include/sge/input/focus/event/out.hpp
	libs/input/include/sge/input/focus/event/out_fwd.hpp
	libs/input/include/sge/input/focus/event/remove.hpp
	libs/input/include/sge/input/focus/event/remove_fwd.hpp
	libs/input/include/sge/input/focus/event/text.hpp
	libs/input/include/sge/input/focus/event/text_fwd.hpp
	libs/input/include/sge/input/focus/key.hpp
	libs/input/include/sge/input/focus/key_fwd.hpp
	libs/input/include/sge/input/focus/mod_state_tracker.hpp
	libs/input/include/sge/input/focus/mod_state_tracker_fwd.hpp
	libs/input/include/sge/input/focus/object.hpp
	libs/input/include/sge/input/focus/object_fwd.hpp
	libs/input/include/sge/input/focus/shared_ptr.hpp
	libs/input/include/sge/input/focus/string.hpp
	libs/input/include/sge/input/info/container.hpp
	libs/input/include/sge/input/info/container_fwd.hpp
	libs/input/include/sge/input/info/detail/declare_container.hpp
	libs/input/include/sge/input/info/id.hpp
	libs/input/include/sge/input/info/name.hpp
	libs/input/include/sge/input/info/unique_id.hpp
	libs/input/include/sge/input/joypad/absolute_axis.hpp
	libs/input/include/sge/input/joypad/absolute_axis_fwd.hpp
	libs/input/include/sge/input/joypad/absolute_axis_id.hpp
	libs/input/include/sge/input/joypad/absolute_axis_info.hpp
	libs/input/include/sge/input/joypad/absolute_axis_info_container.hpp
	libs/input/include/sge/input/joypad/absolute_axis_info_container_fwd.hpp
	libs/input/include/sge/input/joypad/absolute_axis_info_fwd.hpp
	libs/input/include/sge/input/joypad/axis_code.hpp
	libs/input/include/sge/input/joypad/axis_code_fwd.hpp
	libs/input/include/sge/input/joypad/axis_code_to_string.hpp
	libs/input/include/sge/input/joypad/axis_max.hpp
	libs/input/include/sge/input/joypad/axis_min.hpp
	libs/input/include/sge/input/joypad/axis_value.hpp
	libs/input/include/sge/input/joypad/button_id.hpp
	libs/input/include/sge/input/joypad/button_info.hpp
	libs/input/include/sge/input/joypad/button_info_container.hpp
	libs/input/include/sge/input/joypad/button_info_container_fwd.hpp
	libs/input/include/sge/input/joypad/button_info_fwd.hpp
	libs/input/include/sge/input/joypad/button_pressed.hpp
	libs/input/include/sge/input/joypad/container.hpp
	libs/input/include/sge/input/joypad/device.hpp
	libs/input/include/sge/input/joypad/device_fwd.hpp
	libs/input/include/sge/input/joypad/event/absolute_axis.hpp
	libs/input/include/sge/input/joypad/event/absolute_axis_fwd.hpp
	libs/input/include/sge/input/joypad/event/base.hpp
	libs/input/include/sge/input/joypad/event/base_fwd.hpp
	libs/input/include/sge/input/joypad/event/button.hpp
	libs/input/include/sge/input/joypad/event/button_fwd.hpp
	libs/input/include/sge/input/joypad/event/discover.hpp
	libs/input/include/sge/input/joypad/event/discover_fwd.hpp
	libs/input/include/sge/input/joypad/event/relative_axis.hpp
	libs/input/include/sge/input/joypad/event/relative_axis_fwd.hpp
	libs/input/include/sge/input/joypad/event/remove.hpp
	libs/input/include/sge/input/joypad/event/remove_fwd.hpp
	libs/input/include/sge/input/joypad/ff/attack_level.hpp
	libs/input/include/sge/input/joypad/ff/attack_level_fwd.hpp
	libs/input/include/sge/input/joypad/ff/attack_time.hpp
	libs/input/include/sge/input/joypad/ff/attack_time_fwd.hpp
	libs/input/include/sge/input/joypad/ff/condition.hpp
	libs/input/include/sge/input/joypad/ff/condition_fwd.hpp
	libs/input/include/sge/input/joypad/ff/condition_type.hpp
	libs/input/include/sge/input/joypad/ff/condition_type_fwd.hpp
	libs/input/include/sge/input/joypad/ff/constant.hpp
	libs/input/include/sge/input/joypad/ff/constant_fwd.hpp
	libs/input/include/sge/input/joypad/ff/deadband_center.hpp
	libs/input/include/sge/input/joypad/ff/deadband_center_fwd.hpp
	libs/input/include/sge/input/joypad/ff/deadband_size.hpp
	libs/input/include/sge/input/joypad/ff/deadband_size_fwd.hpp
	libs/input/include/sge/input/joypad/ff/degrees_value.hpp
	libs/input/include/sge/input/joypad/ff/delay.hpp
	libs/input/include/sge/input/joypad/ff/delay_fwd.hpp
	libs/input/include/sge/input/joypad/ff/direction.hpp
	libs/input/include/sge/input/joypad/ff/direction_fwd.hpp
	libs/input/include/sge/input/joypad/ff/duration.hpp
	libs/input/include/sge/input/joypad/ff/effect.hpp
	libs/input/include/sge/input/joypad/ff/effect_fwd.hpp
	libs/input/include/sge/input/joypad/ff/effect_unique_ptr.hpp
	libs/input/include/sge/input/joypad/ff/end_magnitude.hpp
	libs/input/include/sge/input/joypad/ff/end_magnitude_fwd.hpp
	libs/input/include/sge/input/joypad/ff/envelope.hpp
	libs/input/include/sge/input/joypad/ff/envelope_fwd.hpp
	libs/input/include/sge/input/joypad/ff/fade_level.hpp
	libs/input/include/sge/input/joypad/ff/fade_level_fwd.hpp
	libs/input/include/sge/input/joypad/ff/fade_time.hpp
	libs/input/include/sge/input/joypad/ff/fade_time_fwd.hpp
	libs/input/include/sge/input/joypad/ff/left_coefficient.hpp
	libs/input/include/sge/input/joypad/ff/left_coefficient_fwd.hpp
	libs/input/include/sge/input/joypad/ff/left_saturation.hpp
	libs/input/include/sge/input/joypad/ff/left_saturation_fwd.hpp
	libs/input/include/sge/input/joypad/ff/magnitude.hpp
	libs/input/include/sge/input/joypad/ff/magnitude_fwd.hpp
	libs/input/include/sge/input/joypad/ff/milli_degrees.hpp
	libs/input/include/sge/input/joypad/ff/milli_degrees_fwd.hpp
	libs/input/include/sge/input/joypad/ff/offset.hpp
	libs/input/include/sge/input/joypad/ff/offset_fwd.hpp
	libs/input/include/sge/input/joypad/ff/optional_duration.hpp
	libs/input/include/sge/input/joypad/ff/optional_duration_fwd.hpp
	libs/input/include/sge/input/joypad/ff/optional_play_count.hpp
	libs/input/include/sge/input/joypad/ff/optional_play_count_fwd.hpp
	libs/input/include/sge/input/joypad/ff/optional_trigger.hpp
	libs/input/include/sge/input/joypad/ff/optional_trigger_fwd.hpp
	libs/input/include/sge/input/joypad/ff/parameters.hpp
	libs/input/include/sge/input/joypad/ff/parameters_fwd.hpp
	libs/input/include/sge/input/joypad/ff/period.hpp
	libs/input/include/sge/input/joypad/ff/period_fwd.hpp
	libs/input/include/sge/input/joypad/ff/periodic.hpp
	libs/input/include/sge/input/joypad/ff/periodic_fwd.hpp
	libs/input/include/sge/input/joypad/ff/phase.hpp
	libs/input/include/sge/input/joypad/ff/phase_fwd.hpp
	libs/input/include/sge/input/joypad/ff/play_count.hpp
	libs/input/include/sge/input/joypad/ff/play_count_fwd.hpp
	libs/input/include/sge/input/joypad/ff/ramp.hpp
	libs/input/include/sge/input/joypad/ff/ramp_fwd.hpp
	libs/input/include/sge/input/joypad/ff/right_coefficient.hpp
	libs/input/include/sge/input/joypad/ff/right_coefficient_fwd.hpp
	libs/input/include/sge/input/joypad/ff/right_saturation.hpp
	libs/input/include/sge/input/joypad/ff/right_saturation_fwd.hpp
	libs/input/include/sge/input/joypad/ff/signed_value.hpp
	libs/input/include/sge/input/joypad/ff/start_magnitude.hpp
	libs/input/include/sge/input/joypad/ff/start_magnitude_fwd.hpp
	libs/input/include/sge/input/joypad/ff/trigger.hpp
	libs/input/include/sge/input/joypad/ff/trigger_cooldown.hpp
	libs/input/include/sge/input/joypad/ff/trigger_cooldown_fwd.hpp
	libs/input/include/sge/input/joypad/ff/trigger_fwd.hpp
	libs/input/include/sge/input/joypad/ff/type.hpp
	libs/input/include/sge/input/joypad/ff/type_field.hpp
	libs/input/include/sge/input/joypad/ff/type_field_fwd.hpp
	libs/input/include/sge/input/joypad/ff/type_fwd.hpp
	libs/input/include/sge/input/joypad/ff/type_to_string.hpp
	libs/input/include/sge/input/joypad/ff/unsigned_value.hpp
	libs/input/include/sge/input/joypad/ff/variant.hpp
	libs/input/include/sge/input/joypad/ff/variant_fwd.hpp
	libs/input/include/sge/input/joypad/ff/waveform.hpp
	libs/input/include/sge/input/joypad/ff/waveform_fwd.hpp
	libs/input/include/sge/input/joypad/info.hpp
	libs/input/include/sge/input/joypad/info_fwd.hpp
	libs/input/include/sge/input/joypad/relative_axis.hpp
	libs/input/include/sge/input/joypad/relative_axis_fwd.hpp
	libs/input/include/sge/input/joypad/relative_axis_id.hpp
	libs/input/include/sge/input/joypad/relative_axis_info.hpp
	libs/input/include/sge/input/joypad/relative_axis_info_container.hpp
	libs/input/include/sge/input/joypad/relative_axis_info_container_fwd.hpp
	libs/input/include/sge/input/joypad/relative_axis_info_fwd.hpp
	libs/input/include/sge/input/joypad/shared_ptr.hpp
	libs/input/include/sge/input/key/code.hpp
	libs/input/include/sge/input/key/code_fwd.hpp
	libs/input/include/sge/input/key/code_to_digit.hpp
	libs/input/include/sge/input/key/code_to_string.hpp
	libs/input/include/sge/input/key/digit.hpp
	libs/input/include/sge/input/key/is_alt.hpp
	libs/input/include/sge/input/key/is_control.hpp
	libs/input/include/sge/input/key/is_shift.hpp
	libs/input/include/sge/input/key/mod_state.hpp
	libs/input/include/sge/input/key/mod_state_fwd.hpp
	libs/input/include/sge/input/key/modifier.hpp
	libs/input/include/sge/input/key/modifier_fwd.hpp
	libs/input/include/sge/input/key/optional_code.hpp
	libs/input/include/sge/input/key/optional_code_fwd.hpp
	libs/input/include/sge/input/key/optional_digit.hpp
	libs/input/include/sge/input/key/optional_digit_fwd.hpp
	libs/input/include/sge/input/key/optional_modifier.hpp
	libs/input/include/sge/input/key/optional_modifier_fwd.hpp
	libs/input/include/sge/input/key/pressed.hpp
	libs/input/include/sge/input/key/to_modifier.hpp
	libs/input/include/sge/input/keyboard/container.hpp
	libs/input/include/sge/input/keyboard/device.hpp
	libs/input/include/sge/input/keyboard/device_fwd.hpp
	libs/input/include/sge/input/keyboard/event/base.hpp
	libs/input/include/sge/input/keyboard/event/base_fwd.hpp
	libs/input/include/sge/input/keyboard/event/discover.hpp
	libs/input/include/sge/input/keyboard/event/discover_fwd.hpp
	libs/input/include/sge/input/keyboard/event/key.hpp
	libs/input/include/sge/input/keyboard/event/key_fwd.hpp
	libs/input/include/sge/input/keyboard/event/remove.hpp
	libs/input/include/sge/input/keyboard/event/remove_fwd.hpp
	libs/input/include/sge/input/keyboard/key.hpp
	libs/input/include/sge/input/keyboard/key_fwd.hpp
	libs/input/include/sge/input/keyboard/key_id.hpp
	libs/input/include/sge/input/keyboard/shared_ptr.hpp
	libs/input/include/sge/input/log_location.hpp
	libs/input/include/sge/input/mouse/axis.hpp
	libs/input/include/sge/input/mouse/axis_code.hpp
	libs/input/include/sge/input/mouse/axis_code_fwd.hpp
	libs/input/include/sge/input/mouse/axis_code_to_string.hpp
	libs/input/include/sge/input/mouse/axis_fwd.hpp
	libs/input/include/sge/input/mouse/axis_id.hpp
	libs/input/include/sge/input/mouse/axis_info.hpp
	libs/input/include/sge/input/mouse/axis_info_container.hpp
	libs/input/include/sge/input/mouse/axis_info_container_fwd.hpp
	libs/input/include/sge/input/mouse/axis_info_fwd.hpp
	libs/input/include/sge/input/mouse/axis_value.hpp
	libs/input/include/sge/input/mouse/button.hpp
	libs/input/include/sge/input/mouse/button_code.hpp
	libs/input/include/sge/input/mouse/button_code_fwd.hpp
	libs/input/include/sge/input/mouse/button_code_to_string.hpp
	libs/input/include/sge/input/mouse/button_fwd.hpp
	libs/input/include/sge/input/mouse/button_id.hpp
	libs/input/include/sge/input/mouse/button_info.hpp
	libs/input/include/sge/input/mouse/button_info_container.hpp
	libs/input/include/sge/input/mouse/button_info_container_fwd.hpp
	libs/input/include/sge/input/mouse/button_info_fwd.hpp
	libs/input/include/sge/input/mouse/button_pressed.hpp
	libs/input/include/sge/input/mouse/container.hpp
	libs/input/include/sge/input/mouse/device.hpp
	libs/input/include/sge/input/mouse/device_fwd.hpp
	libs/input/include/sge/input/mouse/event/axis.hpp
	libs/input/include/sge/input/mouse/event/axis_fwd.hpp
	libs/input/include/sge/input/mouse/event/base.hpp
	libs/input/include/sge/input/mouse/event/base_fwd.hpp
	libs/input/include/sge/input/mouse/event/button.hpp
	libs/input/include/sge/input/mouse/event/button_fwd.hpp
	libs/input/include/sge/input/mouse/event/discover.hpp
	libs/input/include/sge/input/mouse/event/discover_fwd.hpp
	libs/input/include/sge/input/mouse/event/remove.hpp
	libs/input/include/sge/input/mouse/event/remove_fwd.hpp
	libs/input/include/sge/input/mouse/info.hpp
	libs/input/include/sge/input/mouse/info_fwd.hpp
	libs/input/include/sge/input/mouse/shared_ptr.hpp
	libs/input/include/sge/input/plugin/collection.hpp
	libs/input/include/sge/input/plugin/collection_fwd.hpp
	libs/input/include/sge/input/plugin/context.hpp
	libs/input/include/sge/input/plugin/context_fwd.hpp
	libs/input/include/sge/input/plugin/iterator.hpp
	libs/input/include/sge/input/plugin/iterator_fwd.hpp
	libs/input/include/sge/input/plugin/manager.hpp
	libs/input/include/sge/input/plugin/object.hpp
	libs/input/include/sge/input/plugin/object_fwd.hpp
	libs/input/include/sge/input/plugin/traits.hpp
	libs/input/include/sge/input/processor.hpp
	libs/input/include/sge/input/processor_fwd.hpp
	libs/input/include/sge/input/processor_ref.hpp
	libs/input/include/sge/input/processor_unique_ptr.hpp
	libs/input/include/sge/input/system.hpp
	libs/input/include/sge/input/system_fwd.hpp
	libs/input/include/sge/input/system_unique_ptr.hpp
	libs/input/src/input/capabilities_to_string.cpp
	libs/input/src/input/create_multi_system.cpp
	libs/input/src/input/cursor/button_code_to_string.cpp
	libs/input/src/input/cursor/event/base.cpp
	libs/input/src/input/cursor/event/button.cpp
	libs/input/src/input/cursor/event/discover.cpp
	libs/input/src/input/cursor/event/move.cpp
	libs/input/src/input/cursor/event/remove.cpp
	libs/input/src/input/cursor/event/scroll.cpp
	libs/input/src/input/cursor/object.cpp
	libs/input/src/input/cursor/relative_movement/event.cpp
	libs/input/src/input/cursor/relative_movement/object.cpp
	libs/input/src/input/cursor/scroll_code_to_string.cpp
	libs/input/src/input/event_base.cpp
	libs/input/src/input/exception.cpp
	libs/input/src/input/focus/event/base.cpp
	libs/input/src/input/focus/event/discover.cpp
	libs/input/src/input/focus/event/in.cpp
	libs/input/src/input/focus/event/key.cpp
	libs/input/src/input/focus/event/key_repeat.cpp
	libs/input/src/input/focus/event/out.cpp
	libs/input/src/input/focus/event/remove.cpp
	libs/input/src/input/focus/event/text.cpp
	libs/input/src/input/focus/key.cpp
	libs/input/src/input/focus/mod_state_tracker.cpp
	libs/input/src/input/focus/object.cpp
	libs/input/src/input/joypad/absolute_axis.cpp
	libs/input/src/input/joypad/absolute_axis_info.cpp
	libs/input/src/input/joypad/absolute_axis_info_container.cpp
	libs/input/src/input/joypad/axis_code_to_string.cpp
	libs/input/src/input/joypad/button_info.cpp
	libs/input/src/input/joypad/button_info_container.cpp
	libs/input/src/input/joypad/device.cpp
	libs/input/src/input/joypad/event/absolute_axis.cpp
	libs/input/src/input/joypad/event/base.cpp
	libs/input/src/input/joypad/event/button.cpp
	libs/input/src/input/joypad/event/discover.cpp
	libs/input/src/input/joypad/event/relative_axis.cpp
	libs/input/src/input/joypad/event/remove.cpp
	libs/input/src/input/joypad/ff/condition.cpp
	libs/input/src/input/joypad/ff/constant.cpp
	libs/input/src/input/joypad/ff/effect.cpp
	libs/input/src/input/joypad/ff/envelope.cpp
	libs/input/src/input/joypad/ff/parameters.cpp
	libs/input/src/input/joypad/ff/periodic.cpp
	libs/input/src/input/joypad/ff/ramp.cpp
	libs/input/src/input/joypad/ff/trigger.cpp
	libs/input/src/input/joypad/ff/type_to_string.cpp
	libs/input/src/input/joypad/info.cpp
	libs/input/src/input/joypad/relative_axis.cpp
	libs/input/src/input/joypad/relative_axis_info.cpp
	libs/input/src/input/joypad/relative_axis_info_container.cpp
	libs/input/src/input/key/code_to_digit.cpp
	libs/input/src/input/key/code_to_string.cpp
	libs/input/src/input/key/is_alt.cpp
	libs/input/src/input/key/is_control.cpp
	libs/input/src/input/key/is_shift.cpp
	libs/input/src/input/key/to_modifier.cpp
	libs/input/src/input/keyboard/device.cpp
	libs/input/src/input/keyboard/event/base.cpp
	libs/input/src/input/keyboard/event/discover.cpp
	libs/input/src/input/keyboard/event/key.cpp
	libs/input/src/input/keyboard/event/remove.cpp
	libs/input/src/input/keyboard/key.cpp
	libs/input/src/input/log_location.cpp
	libs/input/src/input/mouse/axis.cpp
	libs/input/src/input/mouse/axis_code_to_string.cpp
	libs/input/src/input/mouse/axis_info.cpp
	libs/input/src/input/mouse/axis_info_container.cpp
	libs/input/src/input/mouse/button.cpp
	libs/input/src/input/mouse/button_code_to_string.cpp
	libs/input/src/input/mouse/button_info.cpp
	libs/input/src/input/mouse/button_info_container.cpp
	libs/input/src/input/mouse/device.cpp
	libs/input/src/input/mouse/event/axis.cpp
	libs/input/src/input/mouse/event/base.cpp
	libs/input/src/input/mouse/event/button.cpp
	libs/input/src/input/mouse/event/discover.cpp
	libs/input/src/input/mouse/event/remove.cpp
	libs/input/src/input/mouse/info.cpp
	libs/input/src/input/plugin/collection.cpp
	libs/input/src/input/plugin/context.cpp
	libs/input/src/input/plugin/from_loader_function.cpp
	libs/input/src/input/plugin/iterator.cpp
	libs/input/src/input/plugin/manager.cpp
	libs/input/src/input/plugin/object.cpp
	libs/input/src/input/plugin/traits.cpp
	libs/input/src/input/processor.cpp
	libs/input/src/input/system.cpp
)

find_package(
	awl
	REQUIRED
)

add_sge_base_library(
	input
	HAS_IMPL_DIR
	SGE_DEPS
		sgecore
		sgelog
		sgeplugin
		sgewindow
	TRANSITIVE_SGE_DEPS
		sgecore_interface
		sgelog_interface
		sgeplugin_interface
		sgewindow_interface
	USE_IMPL_INCLUDE_OF
		core
	ADDITIONAL_DEPS
                ${awl_TARGET}
		${fcppt_log_TARGET}
	TRANSITIVE_ADDITIONAL_DEPS
		fcppt_core_interface
		fcppt_log_interface
	IMPLEMENT_FROM
		plugin
)
